# CinePhix-Backend

./: .env.example  .gitignore  Dockerfile  PULL_REQUEST_TEMPLATE.md  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  validate.sh
app/: __init__.py  config.py  database.py  dependencies.py  main.py  redis.py
app/middleware/: rate_limit.py
app/models/: __init__.py  activity_feed.py  activity_feed_v2.py  enums.py  favorite.py  follow.py  follow_request.py  list.py  list_comment.py  list_item.py  notification.py  review.py  review_comment.py  review_vote.py  trakt_connection.py  user.py  user_pro.py  user_stats.py  watched_history.py  watchlist.py
app/routers/: __init__.py  activity.py  activity_v2.py  ai.py  auth.py  discover.py  favorites.py  follows.py  follows_v2.py  list_collaborators.py  list_comments.py  lists.py  notifications.py  payments.py  review_comments.py  reviews.py  tmdb.py  trakt.py  user_stats.py  users.py  watched.py  watchlist.py
app/schemas/: __init__.py  activity.py  auth.py  favorite.py  list.py  media.py  notification.py  review.py  user.py  user_stats.py  watchlist.py
app/services/: __init__.py  ai_service.py  auth_service.py  email_service.py  notification_service.py  tmdb_service.py  trakt_service.py
app/utils/: __init__.py  cache.py  security.py
migrations/: env.py
migrations/versions/: 001_initial.py  002_phase2.py  003_phase2_5.py  004_phase2_5_trakt.py  005_phase3_watched.py  006_review_comments.py  (+3 more)
scripts/: ensure_alembic_baseline.py  entrypoint.sh  init_postgres.sh
tests/: conftest.py
(+2 files in other folders)
